--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,3 +4,16 @@
 // $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 // @import 'font-awesome';
 @import 'box-sizing';
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  height: 100px;
+}
+
+.error {
+  color: red;
+}
